# quasi-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  test.cpp
assimp/: CMakeLists.txt
glad/: CMakeLists.txt
include/: animation.h  animation.hpp  binary_search.h  bone.h  bone.hpp  buffer.h  camera.h  camera.hpp  clock.h  definition.h  glfw_window.h  glfw_window.hpp  image.hpp  light.hpp  material.h  material.hpp  mesh.h  mesh.hpp  model.h  model.hpp  model_load.h  model_load.hpp  move.hpp  opengl.h  parallel.h  parallel.hpp  renderer.hpp  resource_container.hpp  shader.h  shader_container.hpp  texture.h  vertex.h  vertex_attrib.h  vertex_attrib.hpp  warning.h
include/opengl/: buffer.hpp  framebuffer.hpp  opengl.hpp  shader.hpp  texture.hpp
include/utilities/: binary_search.hpp  definition.hpp  glm_to_string.hpp
resource/building/: sylvan_furniture.fbx  sylvan_ground.fbx  sylvan_site.fbx
resource/walking_man/: 새 텍스트 문서.txt
resource/woman/: SYLT_Business_Wom-13_lowpoly_max_mapped.mtl
shader/: basic.frag  basic.vert  basic3d.frag  basic3d.vert  normal.frag  normal.vert  normal_rigging.vert  shadow_map.frag  shadow_map_basic.vert  shadow_map_rigging.vert  shadow_normal.frag  shadow_normal.vert  shadow_normal_env.frag  shadow_normal_rigging.vert  skybox.frag  skybox.vert  skycube.frag  skycube.vert
source/: animation.cpp  bone.cpp  buffer.cpp  camera.cpp  glfw_window.cpp  image.cpp  material.cpp  mesh.cpp  model.cpp  model_load.cpp  move.cpp  renderer.cpp  shader.cpp  texture.cpp
source/image_processor/: stb_image.cpp
source/opengl/: buffer.cpp  (+3 more)
